Added music folder

--- a/src/app/articles/music/2024-09-27/page.mdx
+++ b/src/app/articles/music/2024-09-27/page.mdx
@@ -14,7 +14,7 @@ export const article = {
   title: 'Music Workshop: Sep 27, 2024',
   description:
     `Happy Friday! Our learners continued their engaging lesson on the community, and we can't wait to share their progress with you. This week was exceptionally beautiful, allowing us to spend ample time outside in our delightful outdoor classroom. Together, we planted Montauk daisies and a variety of other bulbs, eagerly anticipating their blooms in the spring.`,
-    folder: "madison"
+    folder: "music"
 }
 
 export const metadata = {
