Cleaned up some formatting

--- a/src/app/articles/music/2024-09-27/page.mdx
+++ b/src/app/articles/music/2024-09-27/page.mdx
@@ -26,13 +26,16 @@ export default (props) => <ArticleLayout article={article} {...props} />
 
 **Dear TSH Families**,
 
+**Dear TSH Families,**
+
 It has been such an incredibly musical week together! I am so excited to continue working with our Learners. They have displayed a wonderful love of all things music, and I am so grateful that I get to expand on their knowledge with them.
 
-In Primary, we worked on steady beat vs rhythm! Learners were able to tell the difference between the two by repeating the phrase "steady beat stays the same, rhythm always changes." We learned about how rhythm is made up of long and short sounds. The quarter note (ta) is equal to one steady beat, whereas our pair of eighth notes (ti ti) each equal half of one steady beat. Learners put this knowledge into action by working on a fall rhythm activity. We used the word "tree" to equal a quarter note, and "apple" to equal our eighth notes. Learners composed their own combination of these notes to create their very own fall rhythm, which we presented to the class! With our half-day Primary Learners, we took it a step further and added high and low pitches to our rhythms, creating our own class song. The Learners named this song "Top."
+In Primary, we worked on steady beat vs rhythm! Learners were able to tell the difference between the two by repeating the phrase "steady beat stays the same, rhythm always changes." We learned about how rhythm is made up of long and short sounds. The quarter note `(ta)` is equal to one steady beat, whereas our pair of eighth notes `(ti ti)` each equal half of one steady beat. Learners put this knowledge into action by working on a fall rhythm activity. We used the word "tree" to equal a quarter note, and "apple" to equal our eighth notes. Learners composed their own combination of these notes to create their very own fall rhythm, which we presented to the class! With our half-day Primary Learners, we took it a step further and added high and low pitches to our rhythms, creating our own class song. The Learners named this song "Top."
 
-In Elementary I, we did a review of reading notes on the treble clef, to call upon their previous music knowledge. Learners used mnemonic devices such as "Every Good Boy Does Fine" to remember our line notes, and "when I see a space, I think of my FACE" to remember our space notes. We were able to use deductive reasoning to identify notes on the treble clef staff, which we then also used to decode some words written in music!
+In Elementary I, we did a review of reading notes on the treble clef, to call upon their previous music knowledge. Learners used mnemonic devices such as "**E**very **G**ood **B**oy **D**oes **F**ine" to remember our line notes, and "when I see a space, I think of my **FACE**" to remember our space notes. We were able to use deductive reasoning to identify notes on the treble clef staff, which we then also used to decode some words written in music!
 
 In Elementary II, we did a review of reading the treble clef, then moved onto rhythm work. We reviewed note values and experimented with some rhythm combinations. Each Learner then received a rhythm card, with a mix of quarter notes, eighth notes, half notes, and quarter rests written on it. In a circle, we kept a steady beat on a drum while we went one by one, reciting our rhythms. The Learner would say their rhythm, then the class would repeat. Learners did an excellent job with their rhythms, but also displayed amazing camaraderie when helping each other with more difficult rhythms. We ended our class with our new weekly tradition of "talent spotlight." Last week, a few Learners had expressed to me that they play outside instruments and would love to be able to perform in class. During the last couple minutes of our time together, Learners showcased their wonderful musical talents!
+
 
 ## Memorable Moments
 
