--- a/src/app/articles/music/2024-09-27/page.mdx
+++ b/src/app/articles/music/2024-09-27/page.mdx
@@ -13,7 +13,7 @@ export const article = {
   date: '2024-09-27',
   title: 'Music Workshop: Sep 27, 2024',
   description:
-    `Happy Friday! Our learners continued their engaging lesson on the community, and we can't wait to share their progress with you. This week was exceptionally beautiful, allowing us to spend ample time outside in our delightful outdoor classroom. Together, we planted Montauk daisies and a variety of other bulbs, eagerly anticipating their blooms in the spring.`,
+    `It has been such an incredibly musical week together! I am so excited to continue working with our Learners. They have displayed a wonderful love of all things music, and I am so grateful that I get to expand on their knowledge with them.`,
     folder: "music"
 }
 
@@ -23,8 +23,6 @@ export const metadata = {
 }
 
 export default (props) => <ArticleLayout article={article} {...props} />
-
-**Dear TSH Families**,
 
 **Dear TSH Families,**
 
